@@ -29,7 +29,6 @@ import java.util.Random;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * @author Eric Medvet <eric.medvet@gmail.com>
@@ -54,7 +53,7 @@ public class MutationOnly<G, S, F> extends StandardEvolver<G, S, F> {
   protected Collection<Individual<G, S, F>> buildOffspring(PartiallyOrderedCollection<Individual<G, S, F>> orderedPopulation, Function<S, F> fitnessFunction, Random random, ExecutorService executor, State state) throws ExecutionException, InterruptedException {
     Collection<G> offspringGenotypes = orderedPopulation.all().stream()
         .map(i -> mutation.mutate(i.genotype(), random))
-        .collect(Collectors.toList());
+        .toList();
     return AbstractIterativeEvolver.map(offspringGenotypes, List.of(), solutionMapper, fitnessFunction, executor, state);
   }
 }
