@@ -4,7 +4,6 @@ import it.units.malelab.jgea.core.util.ArrayTable;
 import it.units.malelab.jgea.core.util.Table;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author eric on 2021/01/04 for jgea
@@ -23,7 +22,7 @@ public class TableBuilder<E, O> implements Accumulator.Factory<E, Table<O>> {
 
       private final Table<O> table = new ArrayTable<>(functions.stream()
           .map(NamedFunction::getName)
-          .collect(Collectors.toList())
+          .toList()
       );
 
       @Override
@@ -35,7 +34,7 @@ public class TableBuilder<E, O> implements Accumulator.Factory<E, Table<O>> {
       public void listen(E e) {
         table.addRow(functions.stream()
             .map(f -> f.apply(e))
-            .collect(Collectors.toList())
+            .toList()
         );
       }
     };
