@@ -37,19 +37,19 @@ public class SymbolicRegressionGrammar extends Grammar<String> {
         .collect(Collectors.toCollection(TreeSet::new));
     List<List<String>> eProductions = arities.stream()
         .map(a -> Stream.concat(List.of(String.format("<o%d>", a)).stream(), Collections.nCopies(a, "<e>").stream())
-            .collect(Collectors.toList()))
-        .collect(Collectors.toList());
+            .toList())
+        .toList();
     eProductions.add(List.of("<v>"));
     eProductions.add(List.of("<c>"));
     getRules().put("<e>", eProductions);
     arities.forEach(a -> getRules().put(String.format("<o%d>", a), operators.stream().filter(o -> o.arity() == a)
         .map(o -> List.of(o.toString()))
-        .collect(Collectors.toList())));
+        .toList()));
     getRules().put("<v>", variables.stream()
         .map(List::of)
-        .collect(Collectors.toList()));
+        .toList());
     getRules().put("<c>", constants.stream()
         .map(c -> List.of(Double.toString(c)))
-        .collect(Collectors.toList()));
+        .toList());
   }
 }
